--- a/tentang.html
+++ b/tentang.html
@@ -124,19 +124,19 @@
 
     <nav>
         <div class="logo">
-            <a href="../les_sd/index.html">
+            <a href="../Web-Dev/index.html">
                 <img src="assets/logo project.jpg" alt="Logo THYNK BIMBEL" />
             </a>
         </div>
 
         <div class="navbar">
-            <a href="../les_sd/index.html">BERANDA</a>
-            <a href="../les_sd/tentang.html">TENTANG</a>
-            <a href="../les_sd/program.html">PROGRAM</a>
+            <a href="../Web-Dev/index.html">BERANDA</a>
+            <a href="../Web-Dev/tentang.html">TENTANG</a>
+            <a href="../Web-Dev/program.html">PROGRAM</a>
         </div>
 
         <div class="login">
-            <button class="button"><a href="../les_sd/login.php">Login</a></button>
+            <button class="button"><a href="../Web-Dev/login.php">Login</a></button>
         </div>
     </nav>
 
