update untuk laporan

--- a/index.html
+++ b/index.html
@@ -517,18 +517,17 @@
                     <p>Jl. Babarsari Jl. Tambak Bayan No.2, Janti, Caturtunggal, Kec. Depok, Kabupaten Sleman, Daerah
                         Istimewa Yogyakarta 55281</p>
                     <h3>Kontak</h3>
-                    <p>Telp: (0274) 950055</p>
-                    <p>Email: official@thynkbimbel.co.id</p>
-                    <p>WhatsApp: 081228097866</p>
+                    <p><strong>Telp :</strong> (0274) 950055</p>
+                    <p><strong>Email :</strong> official@thynkbimbel.co.id</p>
+                    <p><strong>WhatsApp :</strong> 081228097866</p>
                 </div>
 
                 <!-- Program -->
                 <div class="footer-column">
                     <h3>Program</h3>
                     <ul>
-                        <li>Reguler Prestasi</li>
-                        <li>Privat Prestasi</li>
-                        <li>Program Minggu</li>
+                        <li>THYNK Program Cerdas Cilik</li>
+                        <li>THYNK Program Reguler Prestasi</li>
                     </ul>
                 </div>
 
@@ -536,8 +535,8 @@
                 <div class="footer-column">
                     <h3>Halaman</h3>
                     <ul>
-                        <li><a href="#beranda">Home</a></li>
-                        <li><a href="tentang.html">About</a></li>
+                        <li><a href="#beranda">Beranda</a></li>
+                        <li><a href="tentang.html">Tentang</a></li>
                         <li><a href="program.html">Program</a></li>
                     </ul>
                 </div>
