--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         #section3 {
             background-image: linear-gradient(to left, rgba(158, 198, 243, 1) 0%, rgba(158, 198, 243, 0.8) 50%, rgba(158, 198, 243, 0.3) 100%),
                 url('assets/bg3.jpg');
-            padding: 150px 20px;
+            padding: 200px 150px;
             font-family: 'Poppins', sans-serif;
         }
 
@@ -251,7 +251,7 @@
         #section4 {
             background-color: #213448;
             color: white;
-            padding: 100px 20px;
+            padding: 200px 20px;
             text-align: center;
         }
 
@@ -309,7 +309,7 @@
             color: white;
             padding: 20px 40px;
             font-size: 14px;
-            line-height: 1.6;
+            line-height: 1.7;
         }
 
         .footer-container {
@@ -415,7 +415,7 @@
         <div class="komitmen">
 
             <div class="judul-komitmen">
-                <h2>3 Komitmen <span> THYNK BIMBEL </span></h2>
+                <h2>3 Komitmen THYNK BIMBEL</h2>
             </div>
 
             <div class="point-komitmen">
@@ -535,7 +535,7 @@
                 <div class="footer-column">
                     <h3>Halaman</h3>
                     <ul>
-                        <li><a href="#beranda">Beranda</a></li>
+                        <li><a href="index.html">Beranda</a></li>
                         <li><a href="tentang.html">Tentang</a></li>
                         <li><a href="program.html">Program</a></li>
                     </ul>
