update bagian eva

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&family=Fugaz+One&display=swap');
 
         * {
             margin: 0;
@@ -133,14 +134,10 @@
 
         .judul-komitmen h2 {
             font-size: 2.2rem;
+            font-family: Fugaz One;
             color: #fff;
             margin-bottom: 40px;
             margin-top: -70px;
-        }
-
-        .judul-komitmen h2 span {
-            color: #213448;
-            /* bisa diganti warna branding */
         }
 
         .point-komitmen {
@@ -159,6 +156,7 @@
             padding: 25px;
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
             transition: transform 0.3s ease;
+            
         }
 
         .point-komitmen>div:hover {
@@ -208,12 +206,14 @@
             margin: 0 auto;
             display: flex;
             align-items: center;
+            justify-content: center;
             gap: 40px;
             flex-wrap: nowrap;
+            font-family: 'Fugaz One', sans-serif;
         }
 
         #section3 .sejarah .sejarah-img {
-            max-width: 400px;
+            max-width: 550px;
             width: 100%;
             height: auto;
             border-radius: 12px;
@@ -222,7 +222,9 @@
         }
 
         #section3 .sejarah-teks {
-            flex: 1 1 60%;
+            flex: 1 1 50%;
+            max-width: 500px;
+
         }
 
         #section3 .sejarah-teks h2 {
@@ -238,14 +240,13 @@
             line-height: 1.6;
             margin-bottom: 20px;
             text-align: justify;
+            color: black;
         }
 
-        /* Hover efek */
         #section3 .sejarah .sejarah-img:hover {
             transform: translateY(-20px) scale(1.03);
             box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
         }
-
 
         /* bg empat */
         #section4 {
@@ -264,6 +265,8 @@
             font-size: 2.5rem;
             margin-bottom: 50px;
             color: #00aaff;
+            font-family: 'Fugaz One', sans-serif;
+
         }
 
         .keunggulan-grid {
@@ -351,7 +354,6 @@
 
         .footer-column a:hover {
             color: #DDA853;
-            /* atau warna khas brand kamu */
             text-decoration: none;
         }
 
