--- a/tentang.html
+++ b/tentang.html
@@ -8,6 +8,8 @@
 
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&family=Fugaz+One&display=swap');
+
 
         * {
             margin: 0;
@@ -95,6 +97,7 @@
         .tentang h2 {
             font-size: 2.5rem;
             color: #004aad;
+            font-family: 'Fugaz One', cursive;
         }
 
         .tentang h1 {
@@ -102,6 +105,8 @@
             font-weight: 700;
             color: #012e6d;
             margin-top: 10px;
+            font-family: 'Fugaz One', cursive;
+
         }
 
         .visi-misi {
@@ -109,6 +114,7 @@
             font-size: 2rem;
             margin-top: 50px;
             font-weight: 700;
+            font-family: 'Fugaz One', cursive;
         }
 
         .tentang p {
